# sorooshx-exchange-web

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  jest.config.js  jest.setup.ts  package.json  tsconfig.json  vercel.json
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/apps/trading/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/apps/trading/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
backend/scripts/: init-db.sql
frontend/: .env.local.example  jest.config.js  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/messages/: en.json  fa.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: indicators.ts  utils.ts
frontend/src/stores/: useChartStore.ts  useTradeStore.ts
messages/: en.json
src/app/: globals.css
src/app/[locale]/: layout.tsx  page.tsx
src/components/trading/: AccountAssets.tsx  AccountInfoPanel.tsx  Calculator.tsx  DataExport.tsx  DataStatusIndicator.tsx  MarketInfo.tsx  OrderForm.tsx  Orderbook.tsx  OrdersPanel.tsx  TickerSwitcher.tsx  TradingPageClient.tsx  TradingViewWidget.tsx  index.ts
src/components/ui/: Dialog.tsx  Tabs.tsx
src/i18n/: request.ts
src/lib/: constants.ts
src/services/: dataSourceManager.ts
src/services/__tests__/: websocket.test.ts
src/services/account/: index.ts  (+1 more)
src/stores/: useAuthStore.ts  useFuturesUnitStore.ts  useLeverageStore.ts  useMarketStore.ts  useOrderbookStore.ts  useTradeStore.ts
src/types/: exchange.ts  index.ts  orderForm.ts  trading.ts
(+87 files in other folders)
